Prevent overflow

--- a/styles/sound.css
+++ b/styles/sound.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100vh;
   background-color: #040113;
+  overflow: hidden;
 }
 
 .whole-pie {
